<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_menu_search">Поиск</string>
    <string name="main_menu_media">Медиатека</string>
    <string name="main_menu_settings">Настройки</string>
    <string name="setting_menu_share">Поделиться приложением</string>
    <string name="setting_menu_support">Написать в поддержку</string>
    <string name="setting_menu_docs">Пользовательское соглашение</string>
    <string name="setting_menu_dark_mode">Темная тема</string>
    <string name="share_message">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="support_theme_message">Сообщение разработчикам и разработчицам приложения Playlist Maker/</string>
    <string name="support_text_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="docs_message"> https://yandex.ru/legal/practicum_offer/</string>
    <string name="user_email"> blanshetk@ya.ru</string>
    <string name="nothing_found"> Ничего не нашлось</string>
    <string name="something_went_wrong"> Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету.</string>
    <string name="refresh"> Обновить</string>
    <string name="you_search"> Вы искали</string>
    <string name="clear_history"> Очистить историю</string>
    <string name="track_duration"> Длительность</string>
    <string name="album_name"> Альбом</string>
    <string name="track_year"> Год</string>
    <string name="track_genre"> Жанр</string>
    <string name="track_country"> Страна</string>
    <string name="media_menu_search">Медиатека</string>
    <string name="favorites">Избранные треки</string>
    <string name="empty_favorites">Ваша медиатека пуста</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_playlists"> Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>