<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    tools:context=".SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/BaseThemeSetting"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <ImageButton
            android:id="@+id/settingsBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_setting_menu_back">
        </ImageButton>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:text="@string/main_menu_settings"
            android:textSize="26sp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        style="@style/SettingsMenuLinearLayoutStyle">

        <TextView
            style="@style/SettingsMenuTextViewStyle"
            android:text="@string/setting_menu_dark_mode">
        </TextView>

        <Switch
            android:id="@+id/settingsControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_gravity="center"
            tools:ignore="UseSwitchCompatOrMaterialXml">

        </Switch>
    </LinearLayout>

    <LinearLayout
        style="@style/SettingsMenuLinearLayoutStyle">
        <TextView
            style="@style/SettingsMenuTextViewStyle"
            android:text="@string/setting_menu_share">
        </TextView>

        <ImageButton
            android:id="@+id/settingsShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_setting_menu_share"
            android:gravity="end"
            android:background="@color/white"
            android:layout_gravity="center">
        </ImageButton>

    </LinearLayout>

    <LinearLayout
        style="@style/SettingsMenuLinearLayoutStyle">

        <TextView
            style="@style/SettingsMenuTextViewStyle"
            android:text="@string/setting_menu_support">
        </TextView>

        <ImageButton
            android:id="@+id/settingsSupport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:background="@color/white"
            android:src="@drawable/ic_setting_menu_support">
        </ImageButton>

    </LinearLayout>

    <LinearLayout
        style="@style/SettingsMenuLinearLayoutStyle">

        <TextView
            style="@style/SettingsMenuTextViewStyle"
            android:text="@string/setting_menu_docs">
        </TextView>

        <ImageButton
            android:id="@+id/settingsDocs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:background="@color/white"
            android:src="@drawable/ic_setting_menu_docs">
        </ImageButton>

    </LinearLayout>


</LinearLayout>